@@ -46,6 +46,8 @@ documents those changes that are of interest to users and admins.
  -- Modify the output of "scontrol show job" for the field ReqS:C:T=. Fields
     not specified by the user will be reported as "*" instead of 65534.
  -- Added DefaultQOS option for an association.
+ -- BLUEGENE - Added -B option to the slurmctld to clear created blocks from
+    the system on start.
 
 * Changes in SLURM 2.2.0.pre8
 =============================
